# Project-1945-by-Tronus

./: README.md
Project 1945 source/cmake/: FindSDL2.cmake  FindSDL2_image.cmake
Project 1945 source/include/: Actors.h  Inputs.h
Project 1945 source/src/: FontMgr.c  Game_Actors.c  RenderMgr.c  Scene.c  Utility.c
Project_1945_source/: CMakeLists.txt
Project_1945_source/cmake/: FindSDL2TTF.cmake  FindSDL2_mixer.cmake
Project_1945_source/include/: AudioMgr.h  FontMgr.h  Game_Actors.h  Islands.h  RenderMgr.h  Scene.h  Utility.h
Project_1945_source/resources/: data.txt
Project_1945_source/src/: AudioMgr.c  Inputs.c  Islands.c  main.c
